{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 72,
  "lineage": "b5372d25-f92b-96eb-bddc-f1e27d6d8c99",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667632496219:subnet/subnet-0204c1ac7d77121b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "192.168.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "APP1"
                ]
              }
            ],
            "id": "subnet-0204c1ac7d77121b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667632496219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "APP1"
            },
            "vpc_id": "vpc-036b6011d901632f2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hey",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bf964046a441a4ee",
            "arn": "arn:aws:ec2:us-east-1:667632496219:instance/i-07b3c0e6eadc23bc9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b3c0e6eadc23bc9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "worker",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09422b1eea7b51463",
            "private_dns": "ip-192-168-0-162.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.162",
            "public_ip": "18.205.27.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a6f0861435076c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0204c1ac7d77121b1",
            "tags": {
              "Name": "postgres-db-0"
            },
            "tags_all": {
              "Name": "postgres-db-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5d900bf18d6b26f"
            ]
          },
          "dependencies": [
            "aws_security_group.inst",
            "aws_subnet.SUBNETS",
            "aws_vpc.ALL",
            "data.aws_ami.latest_ubuntu",
            "data.aws_subnet.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bf964046a441a4ee",
            "arn": "arn:aws:ec2:us-east-1:667632496219:instance/i-07304bcfde5a077c2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07304bcfde5a077c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "worker",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f916b8d60d45ccd8",
            "private_dns": "ip-192-168-0-108.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.108",
            "public_ip": "44.204.241.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00c6d0d773698ad93",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0204c1ac7d77121b1",
            "tags": {
              "Name": "postgres-db-1"
            },
            "tags_all": {
              "Name": "postgres-db-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5d900bf18d6b26f"
            ]
          },
          "dependencies": [
            "aws_security_group.inst",
            "aws_subnet.SUBNETS",
            "aws_vpc.ALL",
            "data.aws_ami.latest_ubuntu",
            "data.aws_subnet.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667632496219:internet-gateway/igw-05c078b2d7a692214",
            "id": "igw-05c078b2d7a692214",
            "owner_id": "667632496219",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-036b6011d901632f2"
          },
          "dependencies": [
            "aws_vpc.ALL"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667632496219:route-table/rtb-099451868b47a525d",
            "id": "rtb-099451868b47a525d",
            "owner_id": "667632496219",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b6011d901632f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ALL"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667632496219:route-table/rtb-05fed9e1f868a3e4f",
            "id": "rtb-05fed9e1f868a3e4f",
            "owner_id": "667632496219",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c078b2d7a692214",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b6011d901632f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.ALL"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b1fa07c9e8e54a6",
            "route_table_id": "rtb-099451868b47a525d",
            "subnet_id": "subnet-0e53a0a7edf944127"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.SUBNETS",
            "aws_vpc.ALL",
            "data.aws_subnets.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0129341b17ed7079c",
            "route_table_id": "rtb-099451868b47a525d",
            "subnet_id": "subnet-015713c66cf89a045"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.SUBNETS",
            "aws_vpc.ALL",
            "data.aws_subnets.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058670b2e36baa4f7",
            "route_table_id": "rtb-099451868b47a525d",
            "subnet_id": "subnet-0b2f90a2d442e2aaf"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.SUBNETS",
            "aws_vpc.ALL",
            "data.aws_subnets.private"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ec69dd043b659f5",
            "route_table_id": "rtb-099451868b47a525d",
            "subnet_id": "subnet-00d590b1d23828263"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.SUBNETS",
            "aws_vpc.ALL",
            "data.aws_subnets.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e0c6509987cd4d3",
            "route_table_id": "rtb-05fed9e1f868a3e4f",
            "subnet_id": "subnet-0cab7188bc68af401"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public",
            "aws_subnet.SUBNETS",
            "aws_vpc.ALL",
            "data.aws_subnets.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080aed78b5f89acb3",
            "route_table_id": "rtb-05fed9e1f868a3e4f",
            "subnet_id": "subnet-0204c1ac7d77121b1"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public",
            "aws_subnet.SUBNETS",
            "aws_vpc.ALL",
            "data.aws_subnets.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667632496219:security-group/sg-0a5d900bf18d6b26f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5d900bf18d6b26f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240808061134513500000001",
            "name_prefix": "terraform-",
            "owner_id": "667632496219",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inst"
            },
            "tags_all": {
              "Name": "inst"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b6011d901632f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ALL"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUBNETS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667632496219:subnet/subnet-0204c1ac7d77121b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0204c1ac7d77121b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667632496219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APP1"
            },
            "tags_all": {
              "Name": "APP1"
            },
            "vpc_id": "vpc-036b6011d901632f2"
          },
          "dependencies": [
            "aws_vpc.ALL"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667632496219:subnet/subnet-0cab7188bc68af401",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cab7188bc68af401",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667632496219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APP2"
            },
            "tags_all": {
              "Name": "APP2"
            },
            "vpc_id": "vpc-036b6011d901632f2"
          },
          "dependencies": [
            "aws_vpc.ALL"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667632496219:subnet/subnet-0e53a0a7edf944127",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e53a0a7edf944127",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667632496219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WEB1"
            },
            "tags_all": {
              "Name": "WEB1"
            },
            "vpc_id": "vpc-036b6011d901632f2"
          },
          "dependencies": [
            "aws_vpc.ALL"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667632496219:subnet/subnet-015713c66cf89a045",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015713c66cf89a045",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667632496219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WEB2"
            },
            "tags_all": {
              "Name": "WEB2"
            },
            "vpc_id": "vpc-036b6011d901632f2"
          },
          "dependencies": [
            "aws_vpc.ALL"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667632496219:subnet/subnet-00d590b1d23828263",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d590b1d23828263",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667632496219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB1"
            },
            "tags_all": {
              "Name": "DB1"
            },
            "vpc_id": "vpc-036b6011d901632f2"
          },
          "dependencies": [
            "aws_vpc.ALL"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667632496219:subnet/subnet-0b2f90a2d442e2aaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2f90a2d442e2aaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667632496219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB2"
            },
            "tags_all": {
              "Name": "DB2"
            },
            "vpc_id": "vpc-036b6011d901632f2"
          },
          "dependencies": [
            "aws_vpc.ALL"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ALL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667632496219:vpc/vpc-036b6011d901632f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-01546932c56e73fcf",
            "default_route_table_id": "rtb-0a6f2e2b7b2e70985",
            "default_security_group_id": "sg-05dd3c023c2abb902",
            "dhcp_options_id": "dopt-0b1ac4e7259cfbc17",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-036b6011d901632f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a6f2e2b7b2e70985",
            "owner_id": "667632496219",
            "tags": {
              "Name": "ALL"
            },
            "tags_all": {
              "Name": "ALL"
            }
          }
        }
      ]
    }
  ]
}